Alert boxes vertical alignment fix

--- a/_sass/_alerts.scss
+++ b/_sass/_alerts.scss
@@ -11,12 +11,11 @@
 .seealso,
 .todo {
   border: 1px solid transparent;
-  margin-top: -2px;
 
   border-radius: .25rem;
 
-  padding-top: var(--body-line-height);
-  padding-bottom: var(--body-line-height);
+  padding-top: calc(var(--body-line-height) - 1px);
+  padding-bottom: calc(var(--body-line-height) - 1px);
 
   padding-left: calc(var(--body-line-height) * 0.5);
   padding-right: calc(var(--body-line-height) * 0.5);
